syntax = "proto3";

package ozon.dev.homework1.api;
option go_package = "gitlab.ozon.dev/Hostile359/homework-1/pkg/api;api";

import "google/api/annotations.proto";


service User {
  // Add user
  rpc UserAdd(UserAddRequest) returns (UserAddResponse) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }

  // Get user
  rpc UserGet(UserGetRequest) returns (UserGetResponse) {
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }

  // Get users list
  rpc UserList(UserListRequest) returns (UserListResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  // Update user
  rpc UserUpdate(UserUpdateRequest) returns (UserUpdateResponse) {
    option (google.api.http) = {
      put: "/v1/user"
      body: "*"
    };
  }
  
  // Delete user
  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/user"
      body: "*"
    };
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// UserAdd endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserAddRequest {
  string name     = 2;
  string password = 3;
}
message UserAddResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// UserGet endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserGetRequest {
  uint64 id       = 1;
}
message UserGetResponse {
  User user = 1;

  message User {
    uint64 id       = 1;
    string name     = 2;
    string password = 3;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// UserList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserListRequest {
  uint64 page     = 1;
  uint64 per_page = 2;
}
message UserListResponse {
  repeated User users = 1;

  message User {
    uint64 id       = 1;
    string name     = 2;
    string password = 3;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// UserUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserUpdateRequest {
  uint64 id       = 1;
  string name     = 2;
  string password = 3;
}
message UserUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// UserDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserDeleteRequest {
  uint64 id       = 1;
}
message UserDeleteResponse {}
